Fix text decoration bleed

--- a/lil/shlvme/assets/scss/_modules.scss
+++ b/lil/shlvme/assets/scss/_modules.scss
@@ -12,6 +12,10 @@
 		color:$buttonTextColor;
 	}
 
+	&:hover, &:focus {
+		text-decoration:none;
+	}
+
 	&:hover, &:focus, &.immediate {
 		color:#fff;
 	}
